# cuda-learning

./: CMakeLists.txt  README.md
include/: helper.h  reduce.h
lib/reduce/: reduce_cpu.cu  reduce_gpu_v1.cu  reduce_gpu_v2.cu  reduce_gpu_v3.cu  reduce_gpu_v4.cu
src/: Makefile  helper.h  main.cu  matrixMul.cu  matrixMul.h  matrixTranspose.cu  matrixTranspose.h
test/: reduce_test.cu
